# network_homework

./: README.md
network_frame/: go.mod  readme.md  使用方法.md
network_frame/cmd/: main.go
network_frame/pkg/application/: application.go
network_frame/pkg/datalink/: ethernet.go
network_frame/pkg/network/: ipv4.go
network_frame/pkg/receiver/: receiver.go
network_frame/pkg/sender/: sender.go
network_frame/pkg/transport/: udp.go
network_frame_cpp/: CMakeLists.txt  使用方法.md
network_frame_cpp/include/application/: application.h
network_frame_cpp/include/datalink/: ethernet.h
network_frame_cpp/include/network/: ipv4.h
network_frame_cpp/include/receiver/: receiver.h
network_frame_cpp/include/sender/: sender.h
network_frame_cpp/include/transport/: udp.h
network_frame_cpp/src/: main.cpp
network_frame_cpp/src/application/: application.cpp
network_frame_cpp/src/datalink/: ethernet.cpp
network_frame_cpp/src/network/: ipv4.cpp
network_frame_cpp/src/receiver/: receiver.cpp
network_frame_cpp/src/sender/: sender.cpp
network_frame_cpp/src/transport/: udp.cpp
read_report/: prompt_OpenFlow.md  prompt_RFC.md  reading_report.md
